# TrademarkMCP

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  claude_mcp_config.json  pyproject.toml  server.py
.github/workflows/: ci.yml
docs/: architecture.md
src/apache_trademark_mcp/: __init__.py  compliance.py  policy.py  projects.py  protocol.py  schemas.py  search.py  tools.py  web.py
tests/: fixtures.py  html_fixtures.py  test_compliance.py  test_mcp_integration.py  test_policy.py  test_projects.py  test_protocol.py  test_search.py  test_tools.py  test_web.py
