[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-trademark-mcp"
version = "0.1.0"
description = "MCP server for validating proposed Apache project names against ASF trademark policy."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["apache", "incubator", "trademark", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
trademark-mcp = "apache_trademark_mcp.protocol:main"
apache-trademark-mcp = "apache_trademark_mcp.protocol:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apache_trademark_mcp = ["py.typed"]

[project.optional-dependencies]
test = [
  "coverage>=7.0.0",
]
dev = [
  "coverage>=7.0.0",
  "mypy>=1.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
]

[tool.ruff.lint.per-file-ignores]
"tests/test_policy.py" = ["E402"]
"tests/test_projects.py" = ["E402"]
"tests/test_search.py" = ["E402"]
"tests/test_tools.py" = ["E402"]
"tests/test_protocol.py" = ["E402"]
"tests/test_mcp_integration.py" = ["E402"]
"tests/test_web.py" = ["E402"]
"tests/test_compliance.py" = ["E402"]
"server.py" = ["E402"]

[tool.coverage.run]
source = ["apache_trademark_mcp"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
